--- a/app/index.html
+++ b/app/index.html
@@ -40,6 +40,7 @@
 
             <ul class="nav navbar-nav">
               <li class="active"><a href="#/">Home</a></li>
+              <li><a ng-href="#/users">Users</a></li>
               <li><a ng-href="#/about">About</a></li>
             </ul>
           </div>
